# kookie

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  Improvement-to-be-made.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/ocr_support_20260227/: plan.md  spec.md
conductor/tracks/ocr_support_20260227/: index.md  metadata.json  plan.md
docs/: architecture.md  onboarding.md  troubleshooting.md  user-guide.md
kookie/: __init__.py  agents_updater.py  app.py  assets.py  audio.py  clipboard.py  config.py  controller.py  editor_prefs.py  errors.py  export.py  i18n.py  logging_utils.py  monitoring.py  pdf_import.py  preload.py  retry.py  telemetry.py  text_processing.py  ui.py  update_checker.py
kookie.xcodeproj/: project.pbxproj
kookie/backends/: __init__.py  base.py  kokoro.py  mock.py
packaging/: kookie.spec
scripts/: build_app.sh  create_dmg.sh  notarize_app.sh  preload_voice.sh  sign_app.sh
tests/: conftest.py  test_agents_updater.py  test_app_audio_features.py  test_app_pdf_load.py  test_app_save.py  test_app_smoke.py  test_app_startup.py  test_app_updates.py  test_assets.py  test_audio.py  test_audio_features.py  test_backend_selection.py  test_build_script.py  test_ci_configs.py  test_clipboard.py  test_clipboard_schedule.py  test_config_clipboard.py  test_config_management.py  test_controller.py  test_controller_features.py  test_dev_experience.py  test_editor_prefs.py  test_error_integration.py  test_errors.py  test_export.py  test_i18n.py  test_kokoro_backend.py  test_logging_utils.py  test_macos_release_signing.py  test_manual_input.py  test_mock_backend.py  test_monitoring.py  test_ocr_detection.py  test_packaging_spec.py  test_pdf_import.py  test_pdf_import_enhanced.py  test_pdf_ocr.py  test_preload.py  test_retry.py  test_status_bar.py  (+10 more)
tests/e2e/: test_runtime_smoke.py
tests/integration/: test_e2e_workflow.py  test_ocr_integration.py
tests/perf/: test_perf_pdf_import.py  test_perf_text_processing.py
