[project]
name = "kookie"
version = "0.1.0"
description = "Local-first macOS Kokoro TTS desktop app"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "kivy>=2.3.0",
  "numpy>=2.0.0",
  "sounddevice>=0.4.7",
  "onnxruntime>=1.18.0",
  "kokoro-onnx>=0.4.0",
  "pyinstaller>=6.19.0",
  "pymupdf>=1.27.1",
  "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "pyinstaller>=6.0.0",
]

[project.scripts]
kookie = "kookie.__main__:main"
kookie-preload-voice = "kookie.preload:main"
kookie-update-agents = "kookie.agents_updater:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
