[project]
name = "kookie"
version = "0.1.0"
description = "Local-first macOS Kokoro TTS desktop app"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "kivy>=2.3.0",
  "numpy>=2.0.0",
  "sounddevice>=0.4.7",
  "onnxruntime>=1.18.0",
  "kokoro-onnx>=0.4.0",
  "pyinstaller>=6.19.0",
  "pymupdf>=1.27.1",
  "pytest>=9.0.2",
  "pillow>=12.1.1",
  "pytesseract>=0.3.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "hypothesis>=6.130.0",
  "mypy>=1.14.0",
  "pyinstaller>=6.0.0",
  "ruff>=0.8.0",
]

[project.scripts]
kookie = "kookie.__main__:main"
kookie-preload-voice = "kookie.preload:main"
kookie-update-agents = "kookie.agents_updater:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers"
testpaths = ["tests"]
markers = [
  "unit: fast isolated tests",
  "integration: multi-module tests with local dependencies",
  "e2e: end-to-end workflow validation",
  "perf: performance regression guards",
]

[tool.coverage.run]
source = ["kookie"]
branch = true
omit = [
  "kookie/ui.py",
  "kookie/__main__.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
ignore_missing_imports = true
